# jsbgym

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: python-publish.yml
jsbgym/: __init__.py  aircraft.py  assessors.py  basic_ic.xml  environment.py  flightgear.xml  minimal_ic.xml  properties.py  rewards.py  simulation.py  tasks.py  utils.py  visualiser.py
jsbgym/JSBSim/matlab/: JSBSimSimulinkCompile.m
jsbgym/agents/: __init__.py  agents.py
jsbgym/tests/: manual_tests.py  stubs.py  test_agents.py  test_assessors.py  test_environment.py  test_functional.py  test_geodetic_position.py  test_rewards.py  test_simulation.py  test_tasks.py  test_visualiser.py
