[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "jsbgym"
version = "0.0.1"
readme = "README.md"
description = "A package of reinforcement learning environments for flight control using the JSBSim flight dynamics model."
license = {text = "MIT"}
classifiers=[
        "License :: OSI Approved :: MIT License",
        "Development Status :: 2 - Pre-Alpha",
        "Intended Audience :: Science/Research",
        "Programming Language :: Python :: 3.7",
        "Topic :: Scientific/Engineering :: Artificial Intelligence",
    ],
requires-python = ">=3.7"
dependencies = [
    "numpy",
    "gymnasium"
    "jsbsim",
    "matplotlib",
]

[project.urls]
"Homepage" = "https://github.com/sryu1/jsbgym"
"Bug Tracker" = "https://github.com/sryu1/jsbgym/issues"