[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "jsbgym"
version = "0.3.1"
authors = [{ name = "sryu1" }]
readme = "README.md"
license = { text = "MIT" }
description = "A package of reinforcement learning environments for flight control using the JSBSim flight dynamics model."
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

requires-python = ">=3.8"
dependencies = ["numpy", "gymnasium", "jsbsim", "matplotlib"]

[project.urls]
Homepage = "https://github.com/sryu1/jsbgym"
Repository = "https://github.com/sryu1/jsbgym"
"Bug Tracker" = "https://github.com/sryu1/jsbgym/issues"


[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages]
find = { namespaces = false }
